# FastAPI-Template

./: .dockerignore  .env.example  .importlinter  Dockerfile  Dockerfile.3.13  Dockerfile.3.14  Makefile  README.md  alembic.ini  docker-compose.e2e.yml  docker-compose.yml  pyproject.toml  renovate.json  ruff.toml  sonar-project.properties  ty.toml
.docker/: e2e-realm-export.json  realm-export.json
.github/: dependabot.yml
.github/workflows/: workflow.yml
.zed/: settings.json
Endpoint-test/: README.md  pyproject.toml
Endpoint-test/endpoint_test/: __init__.py  client.py  config.py
Endpoint-test/features/: entities.feature  environment.py
Endpoint-test/features/steps/: entity_steps.py
alembic/: README.md  env.py
alembic/versions/: 2026_01_24_2012-97f7686bdccd_create_entities_table.py
app/: main.py  telemetry.py
app/auth/: __init__.py  jwks.py  token_validator.py
app/database/: __init__.py  engine.py  session.py
app/exceptions/: __init__.py  base.py  exceptions.py
app/io/: __init__.py  entity.py
app/logger/: __init__.py  configuration.py  filters.py  formatters.py  handlers.py  logger.py
app/model/: __init__.py  base.py  entity.py
app/repository/: __init__.py  base.py  entity.py  primary.py
app/routes/: __init__.py  entity.py  health.py
app/service/: __init__.py  entity.py
app/settings/: __init__.py  app.py  authentication.py  config.py  database.py
scenario-tests/: .env.example  README.md  pyproject.toml
scenario-tests/app/: __init__.py  client.py  config.py
scenario-tests/features/: __init__.py  entities.feature  environment.py
scenario-tests/features/steps/: __init__.py  behave_types.py  entity_steps.py
scenario-tests/interface/: __init__.py  behave.py
scenario-tests/typings/behave/: __init__.pyi
tests/: __init__.py  conftest.py
tests/integration/: conftest.py  test_database_guard.py  test_entities_api.py  test_entity.py  test_health.py  test_otel_api.py  test_repository.py
tests/unit/: conftest.py  test_entity_routes.py  test_entity_schemas.py  test_exceptions.py  test_logger.py  test_main.py  test_settings.py  test_telemetry.py
tests/unit/auth/: test_token_validator.py
tests/unit/database/: test_engine.py  test_session.py
tests/unit/exceptions/: test_exceptions.py
tests/unit/io/: test_entity.py
tests/unit/logger/: test_logger.py  test_otel_logging.py
tests/unit/repository/: test_base_repository.py
tests/unit/routes/: test_entity.py  test_health.py
tests/unit/service/: test_entity_service.py  test_entity_service_behaviour.py
tests/unit/settings/: test_settings.py
