[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic[tz]>=1.18.4",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[dependency-groups]
lint = [
    "ruff>=0.15.13",
    "ty>=0.0.36",
]
test = [
    "pytest>=9.0.3",
    "anyio>=4.13.0",
    "httpx>=0.28.1",
    "aiosqlite>=0.22.1",
    "pytest-cov>=7.1.0",
    "testcontainers[postgres]>=4.14.2",
]

[tool.alembic]
script_location = "%(here)s/alembic"
timezone = "UTC"
file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"
prepend_sys_path = ["."]
version_locations = [
   "%(here)s/alembic/versions"
]
output_encoding = "utf-8"

[[tool.alembic.post_write_hooks]]
name = "ruff"
type = "exec"
executable = "ruff"
options = "check --fix REVISION_SCRIPT_FILENAME"
[tool.pytest.ini_options]
testpaths = ["tests"]
anyio_mode = "auto"
markers = [
    "unit: fast, no external deps",
    "integration: tests that use disposable Postgres via Testcontainers",
]
addopts = "-v --strict-markers"
